# swmm-parse

./: Manifest.in  README.md  build-requirements.txt  pyproject.toml
.github/workflows/: build-wheel.yml
src/swmm/parse/: __init__.py  to_input_file.py
src/swmm/parse/grammars/: input-earley.lark  input-lalr.lark  report-earley.lark
tests/: test_earley.py  test_lalr.py  test_to_input_file.py
tests/data/: example-project.inp
